Changes styles include to main preload css.

--- a/source/templates/mt_dynamic_error.html
+++ b/source/templates/mt_dynamic_error.html
@@ -9,7 +9,7 @@
  
  
 <style rel="stylesheet" type="text/css" media="all">
-<$mt:Include module="embedded_CSS_inside"$>
+<$mt:Include module="embedded_CSS_main"$>
 </style> 
 
 <link href="http://www.davidputney.com/css/styles.css" rel="stylesheet" type="text/css" media="all" /> 
