--- a/source/templates/mt_monthly_archive.html
+++ b/source/templates/mt_monthly_archive.html
@@ -11,7 +11,7 @@
 
  
 <style rel="stylesheet" type="text/css" media="all">
-<$mt:Include module="embedded_CSS_inside"$>
+<$mt:Include module="embedded_CSS_main"$>
 </style> 
 
 <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" /> 
