--- a/source/sass/partials/_animations.scss
+++ b/source/sass/partials/_animations.scss
@@ -83,7 +83,7 @@
 	opacity: 1;
 	padding:rem(25) 0;
 	transform: scale(1);
-	transition: height .3s cubic-bezier(.85,.08,.28,1.31), opacity .3s ease-in .2s, transform .2s cubic-bezier(.85,.08,.28,1.31) .3s;
+	transition: height .3s ease-in-out, opacity .3s ease-in .2s, transform .2s ease-in-out .3s;
 }
 .nav-list--close {
 	height:rem(0);
