--- a/source/sass/partials/_text_styles.scss
+++ b/source/sass/partials/_text_styles.scss
@@ -140,7 +140,7 @@ ol li::before {
 	border-radius:4px;
 	margin:0 auto 60px;
 	letter-spacing:.06em;
-	transition:color .5s ease-in, background-color .5s ease-in;
+	transition:color .2s ease-in, background-color .2s ease-in;
 	background-image:none;
 	text-shadow:none;
 	box-shadow: 0 0 40px 15px rgba($med, .3);
@@ -148,10 +148,11 @@ ol li::before {
 		&:hover{
 			background-color:$aqua;
 			color:white;background-image:none;
+			.button-icon {
+				fill:white;
+				transition: fill .2s;
+			}
+
+
 		}
-}
-@keyframes buttonHover {
-    0%   {background-color:$dark_aqua;}
-    80%  {background-color:$aqua;}
-    100% {background-color:$dark_aqua;}
 }
