--- a/source/templates/mt_footer.html
+++ b/source/templates/mt_footer.html
@@ -1,4 +1,4 @@
-<a href="#page-top" id="scroll-to-top" class="scroll-to-top">	
+<a href="#page-top" id="scroll-to-top" class="scroll-to-top">
 	<span class="svg-container" aria-hidden="true">
 	<svg class="scroll-up-icon">
       <use xlink:href="#up-arrow" />
@@ -9,15 +9,15 @@
 <ul id="footer-nav" class="footer-navigation-menu clearfix">
 	<$mt:Include module="nav_links"$>
 </ul>
-<ul class="footer-links footer-links-active clearfix">
+<ul class="footer-links footer-links-active">
 	<li class="mail-link"><span class="hidden">email me</span>
-	<span id="email-link" class="svg-container" aria-hidden="true">	
+	<span id="email-link" class="svg-container" aria-hidden="true">
 	<svg class="footer-icon">
       <use xlink:href="#mail" />
     </svg>
 	</span>
 	</li>
-	
+
 	<li class="twitter-link"><span class="hidden">my twitter account</span>
 	<span id="twitter-link" class="svg-container" aria-hidden="true">
 		<svg class="footer-icon">
@@ -25,8 +25,8 @@
     </svg>
 	</span>
 	</li>
-	
-	<li class="facebook-link"> 
+
+	<li class="facebook-link">
 	<span class="hidden">my facebook account</span>
 	<span class="svg-container" aria-hidden="true" id="facebook-link">
 	<span id="facebook-link" class="svg-container" aria-hidden="true">
@@ -35,7 +35,7 @@
     </svg>
 	</span>
 	</li>
-	
+
 	<li class="github-link">
 	<span class="hidden">my github account</span>
 	<a href="https://github.com/putneydm" target="_blank" >
@@ -47,7 +47,7 @@
 	</span>
 	</a>
 	</li>
-</ul>	
+</ul>
 <p class="footer-tagline">This is the personal website of David M. Putney. It is not affiliated with any current or former employers.</p>
 <p class="footer-tagline">&#169; Copyright <mt:Date format="%Y">, David M. Putney <p>
 </footer>
