Removes underline in blog tagline.

--- a/source/sass/partials/_blog.scss
+++ b/source/sass/partials/_blog.scss
@@ -295,6 +295,9 @@ pre {
 	font-size:em(14);
 	color:$med;
 	font-style:italic;
+		a {
+			background-image:none;
+		}
 }
 .embed-container {
 	position: relative;
