--- a/source/templates/mt_blog_image.html
+++ b/source/templates/mt_blog_image.html
@@ -1,8 +1,10 @@
-<figure class="blog-image med-photo-overlay">	
-	<picture>  
-		<source srcset="<$mt:BlogArchiveURL$>siteart/large_<mt:EntryDataImage_one>.jpg" media="(min-width:550px)">
-		<source srcset="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg" media="(min-width:350px)">
-		<source srcset="<$mt:BlogArchiveURL$>siteart/xsmall_<mt:EntryDataImage_one>.jpg">
-		<img src="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg" alt="<mt:If tag="EntryDataImage_alt"><mt:EntryDataImage_alt></mt:If>">
-	</picture>	  
+<figure class="blog-image med-photo-overlay">
+	<img
+		srcset="<$mt:BlogArchiveURL$>siteart/large_<mt:EntryDataImage_one>.jpg 1400w,
+		        <$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg 900w,
+		        <$mt:BlogArchiveURL$>siteart/xsmall_<mt:EntryDataImage_one>.jpg 450w"
+		sizes="(min-width:43.75rem) 43.75rem, 100vw"
+		src="<$mt:BlogArchiveURL$>siteart/med_<mt:EntryDataImage_one>.jpg"
+		alt="<mt:If tag="EntryDataImage_alt"><mt:EntryDataImage_alt></mt:If>">
+	</img>
 </figure>
