Cleans up markup on about page module and makes it more semantic.

--- a/source/templates/mt_about_module.html
+++ b/source/templates/mt_about_module.html
@@ -1,29 +1,21 @@
-<div class="resume_container">
-<section class="resume-section clearfix">
+<div class="about-container">
+<section class="about-section">
 <h2 class="section-header-index">This is me</h2>
 <mt:entries category="about/subcategory">
-<ul class="resume-details">
-<li>
-	<article class="resume-information">
-		<figure class="resume-mugshot">
+	<article class="about-information">
+		<figure class="about-mugshot">
 			<img src="../siteart/about_mugshot.jpg" alt="David M. Putney mugshot">
 		</figure>
-	<mt:entrybody>
-	</article>	
-</li>
+	<mt:entrybody smarty_pants = '1'>
+	</article>
 </mt:entries>
-</ul>
 </section>
-<section class="resume-section clearfix">
+<section class="about-section">
 <h2 class="section-header-index">This is my site</h2>
 <mt:entries category="about/subcategorytoo">
-<ul class="resume-details">
-<li>
-		<article class="resume-information">
-		<mt:entrybody>
-		</article>	
-	</li>
+		<article class="about-information">
+		<mt:entrybody smarty_pants = '1'>
+		</article>
 </mt:entries>
-</ul>
 </section>
-</div> 
+</div>
